--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="swiper-slide">
             <div
               class="box"
-              style="background: url(./img/section-a1.jpg) no-repeat"
+              style="background: url(/img/section-a1.jpg) no-repeat"
             >
               <div class="content">
                 <span class="content-title">A MINIMALIST WORDPRESS THEME</span>
@@ -86,7 +86,7 @@
           <div class="swiper-slide">
             <div
               class="box second"
-              style="background: url(.img/section-a2.jpg) no-repeat"
+              style="background: url(img/section-a2.jpg) no-repeat"
             >
               <div class="content">
                 <span class="content-title">MADE WITH LOVE BY TREETHEMES</span>
