--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="container-one" data-aos="slide-up">
         <div class="container-one-list">
           <div class="container-one-item">
-            <img src="/img/one-design.png" alt="" />
+            <img src="/img/one-gift.png" alt="" />
             <h2>CLEAN DESIGN</h2>
             <p>
               Professionally repurpose premium rather than magnetic bandwidth.
