--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
           <div class="swiper-slide">
             <div
               class="box"
-              style="background: url(/img/section-a1.jpg) no-repeat"
+              style="
+                background: url(https://wallpaperaccess.com/full/279547.jpg)
+                  no-repeat;
+              "
             >
               <div class="content">
                 <span class="content-title">MADE WITH LOVE BY TREETHEMES</span>
