--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
       <div class="container-one" data-aos="slide-up">
         <div class="container-one-list">
           <div class="container-one-item">
-            <img src="/img/one-gift.png" alt="" />
-            <h2>CLEAN DESIGN</h2>
+            <img src="img/one-gift.png" alt="" />
+            <h2>PREMIUM RESOURCES</h2>
             <p>
               Professionally repurpose premium rather than magnetic bandwidth.
             </p>
           </div>
           <div class="container-one-item">
-            <img src="img/one-gift.png" alt="" />
-            <h2>PREMIUM RESOURCES</h2>
+            <img src="img/one-pc.png" alt="" />
+            <h2>RESPONSIVE LAYOUT</h2>
             <p>
               Professionally repurpose premium rather than magnetic bandwidth.
             </p>
